# project-user-svc

./: README.md  base  pyproject.toml
app/: config.py  main.py
app/configs/: .env
app/domain/models/: user.py
app/infrastructure/db/: db.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations_sql/: init_user_svc.sql
app/infrastructure/db/models/: favorite_films.py  favorite_genres.py  users.py  viewed.py
app/infrastructure/dto/: user_create_command.py  user_filter_query.py  user_query.py
app/infrastructure/dto/favorite_films/: film_create_command.py  film_query.py
app/infrastructure/dto/favorite_genres/: genre_create_command.py  genre_query.py
app/infrastructure/dto/users/: change_pass_command.py  user_auth_query.py  user_create_command.py  user_query.py  user_update_command.py
app/infrastructure/dto/viewed/: viewed_create_command.py  viewed_query.py  viewed_update_command.py
app/infrastructure/repositories/: favorite_films_repository.py  favorite_genres_repository.py  repository.py  user_repository.py  users_repository.py  viewed_repository.py
app/routers/: users.py
app/routers/favorite_films/: create.py  delete.py  favorite_films.py  read.py
app/routers/favorite_genres/: create.py  delete.py  favorite_genres.py  read.py
app/routers/users/: auth.py  change_pass.py  create.py  read.py  send_code.py  update.py  users.py
app/routers/viewed/: create.py  delete.py  read.py  update.py  viewed.py
app/use_cases/: authenticate.py  get_user.py  jwt.py
(+5 files in other folders)
