[project]
name = "user-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.36",
    "typer>=0.12.5",
    "uvicorn[standard]>=0.31.0",
]
