[tool.poetry]
name = "user-svc"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://your-repository-url"
homepage = "https://your-homepage-url"
keywords = ["user", "service"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
bcrypt = "4.0.1"
fastapi = "^0.115.0"
passlib = "^1.7.4"
pydantic-settings = "^2.6.0"
pytest = "^8.3.3"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.36"
typer = "^0.12.5"
uvicorn = "^0.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"